src/scss/style.scss
@import 'base/fonts.scss';
@import 'theme.scss';
@import 'bulma.scss';

html {
  background-color: $backgroundColor;
}

html, body {
  padding: 0;
}

html,
.navbar.is-fixed-top {
  max-width: $maxWidth;
  margin: auto;
}

body {
  margin: 0;
  background-color: $backgroundColor;
  display: flex;
  min-height: calc(100vh - #{$navbar-height});
  flex-direction: column;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@media screen and (max-width: $desktop) {
  html.has-navbar-fixed-top {
    padding-top: #{$navbar-height + $navbarMenuHeight};
  }
  body {
    min-height: calc(100vh - #{$navbar-height + $navbarMenuHeight})
  }
}

@media screen and (min-width: $maxWidth) {
  html {
    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
  }
}

body > .section {
  flex: 1 1 auto;
}

section.hero.is-fullheight {
  padding: 0;

  & > .columns {
    flex: 1 1 auto;
    margin: 0;

    & > .column {
      padding: 0;

      &.sidebar {
        padding: 0;
        box-shadow: 1px 0 1px 0 rgba(0,0,0,0.15);
        z-index: 1;

        aside.menu {
          padding: grid(2);
          background-color: $accentColor;
          flex: 1 1 auto;
          flex-direction: column;

          .is-main-link {
            margin-bottom: grid(4);
            display: flex;
            justify-content: space-between;
          }

          h1 {
            margin-top: grid(1);
            font-size: 28px;
            color: $black;
            text-transform: uppercase;
          }

          a:hover h1 {
            color: $red;
          }
        }
      }

      &.is-content {
        flex-direction: column;
        justify-content: space-between;
      }
    }
  }
}

main.content {
  padding: grid(4) grid(8);
  margin: 0 auto;

  article {
    width: grid(75);
  }

  h1, h2, h3 {
    font-weight: normal;
    text-transform: uppercase;
  }

  h1 {
    font-size: 28px;
  }

  h2 {
    font-size: 22px;
  }

  h3 {
    font-size: 20px;
  }

  h4 {
    font-size: 18px;
  }

  h5, h6 {
    font-size: 16px;
  } 

  .post > h1:first-child {
    margin-bottom: grid(4);
  }

  img {
    max-height: 400px;
  }
}

.sticky-sidebar {
  position: sticky;
  top: grid(2);
  height: calc(100vh - #{grid(4)});
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}



svg.logo {
  width: 263px;
  height: grid(5.25);

  path {
    &.powered-by {
      fill: #444444;
    }
    &.city-bureau {
      fill: $red;
    }
  }
}

a {
  &:hover {
    svg.logo {
      path.documenters-org {
        fill: $red;
      }
    }
  }
}

@media screen and (max-width: $tablet) {
  section.hero.is-fullheight {
    & > .columns > .column.sidebar aside.menu {
      .is-main-link {
        margin-bottom: grid(1);
      }
      h1 {
        margin-top: 0;
        font-size: 22px;
      }
    }
  }

  main.content {
    padding: grid(2);

    article {
      width: unset;
      max-width: grid(75);
    }
  }

  .sticky-sidebar {
    height: unset;
  }

  svg.logo {
    &.top {
      display: inherit;
    }
    &.bottom {
      display: none;
    }
  }
}

.menu-list {
  a {
    color: $grayDark;
    position: relative;
    padding: 0.5em 0;

    &::after {
      width: grid(1);
      height: grid(1);
      background-color: $bodyTextColor;
      border: 0.5px $bodyTextColor solid;
      border-radius: 50%;
      position: absolute;
      right: grid(-1);
      top: calc(50% - #{grid(0.5)});
      box-shadow: 0 1px 2px 0 rgba(0,0,0,0.15);
    }

    & + ul {
      display: none;
    }

    &.active,
    &.is-page {
      color: $black;

      & + ul {
        display: inherit;
      }
    }

    &.is-page {
      &::after {
        content: '';
      }
    }

    &.toggle {
      &::after {
        content: '+\fe0e';
        border: unset;
        background-color: unset;
        top: unset;
        box-shadow: unset;
        text-align: center;
      }

      &.active {
        &::after {
          content: '-\fe0e';
        }
      }
    }
    
    &:hover {
      background-color: transparent;
      color: $red;
    }
  }

  li {
    ul {
      margin: 0.5em 0;

      li {
        font-size: 14px;

        a {
          padding: 0.35em 0;
        }
      } 
    }

    &.active + ul {
      display: inherit;
    }
  }

  & > li > a {
    text-transform: uppercase;
  }
}


@media screen and (min-width: $tablet) {
  .menu-list a:hover {
    &:not(.toggle)::after {
      content: '';
      background-color: $grayLight3;
    }
  }
}

.footer {
  padding: 1.5rem;

  p.brand {
    font-family: $altFontStack;
    margin: 0;
  }
}

small {
  font-size: 0.75rem;
}

img {
  image-orientation: from-image;
}

/* Hide IE, Edge pseudo-elements */
::-ms-clear {
  display: none;
}

::-ms-check {
  color: $blue;
  background-color: transparent;
  border-color: transparent;
}

::-ms-expand {
  background-color: transparent;
  border: 0;
}

article {
  h1.title,
  h1.title a {
    color: $black;

    &:hover {
      color: $red;
    }
  }
}

.content ul {
  margin-left: grid(2);

  &.task-list,
  li.task-list-item {
    margin-left: 0;
    list-style: none;
  }

  li input {
    margin-right: grid(1);
  }
}

.task-list {
  label {
    display: inline-block;
  }
}

input[type=checkbox] {
  -webkit-appearance: none;
  -moz-appearance: none;
  min-width: grid(3);
  height: grid(3);
  background-color: $white;
  border: $defaultBorder;
  border-color: $grayDark2;
  border-radius: grid(0.25);
  box-shadow: none;
  position: relative;
  vertical-align: bottom;

  &:checked::after {
    content: '\2714\fe0e';
    position: absolute;
    margin: auto;
    width: grid(2.5);
    height: grid(2.5);
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    font-size: 1rem;
    color: $blue;
    border-width: 0;
    text-align: center;
    line-height: 1;
  }
}

